[project]
name = "probable-train"
version = "0.1.0"
description = "Backend Senior Engineer - Candidate Technical Exercise"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dateparser>=1.3.0",
    "flask>=3.1.3",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=25.1.0",
    "sqlalchemy>=2.0.48",
]

[dependency-groups]
dev = [
    "ipython>=9.10.0",
]

# [tool.ruff]
# More practical line length for modern monitors without being excessive                           
# line-length=100
