[project]
name = "probable-train"
version = "0.1.0"
description = "Backend Senior Engineer - Candidate Technical Exercise"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dateparser>=1.3.0",
    "flask>=3.1.3",
    "gunicorn>=25.1.0",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.48",
]

[dependency-groups]
dev = [
    "ipython>=9.10.0",
    "ruff>=0.9.0",
    "pre-commit>=4.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["probable_train"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
force-single-line = false
force-sort-within-sections = true
order-by-type = false
split-on-trailing-comma = false
